Finalizes styling of saved grids and the headings.

--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -10,12 +10,13 @@ body {
 
 .wrapper {
   margin: 0 auto;
-  padding: 15px 15px 15px 15px;
+  padding: 0;
   width: 500px;
 }
 
 header {
   margin: 0 auto;
+  margin-top: 10px;
   width: 500px;
 }
 
@@ -47,9 +48,9 @@ h2 {
 }
 
 form {
-  padding: 10px;
+  padding: 0px;
   margin: 0 auto;
-  width: 480px;
+  width: 500px;
 }
 
 #formValueID {
@@ -58,8 +59,9 @@ form {
   height: 50px;
   margin: 0 auto;
   margin-top: 10px;
+  padding: 0;
   text-align: center;
-  width: 98%
+  width: 496px;
 }
 
 #submitButton {
@@ -71,7 +73,7 @@ form {
   font-weight: 200;
   margin: 10px auto;
   padding: 0;
-  width: 49%;
+  width: 49.5%;
 }
 
 button {
@@ -85,17 +87,16 @@ button {
   margin: 10px auto;
   margin-top: 10px;
   padding: 0;
-  width: 49%;
+  width: 49.5%;
 }
 
 .default-grid {
   margin: 0 auto;
-  padding: 5px 5px 5px 5px;
+  padding: 0px;
   width: 500px;
 }
 
 ul {
-  border: 1px solid black;
   height: 500px;
   margin: 0 auto;
   padding: 0;
